web/openshift/env/dev/deployment.web_env.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-sharing-web
spec:
  template:
    spec:
      containers:
        - name: photo-sharing-web
